--- a/index.css
+++ b/index.css
@@ -1,9 +1,31 @@
+/* DEFAULT VALUES */
+
+* {
+  margin: 0;
+}
+
 body {
   margin: auto;
   font-family: 'Lato', sans-serif;
 }
 
-/* Navigation */
+.mv-4 {
+  margin: 4px 0px;
+}
+
+.mv-8 {
+  margin: 8px 0px;
+}
+
+.mv-16 {
+  margin: 16px 0;
+}
+
+.mv-24 {
+  margin: 24px 0;
+}
+
+/* NAVIGATION */
 
 nav {
   display: flex;
@@ -20,7 +42,7 @@ nav {
 
 .nav-container {
   display: flex;
-  width: 1280px;
+  width: 1360px;
   justify-content: space-between;
   flex-direction: row;
 }
@@ -39,17 +61,15 @@ nav {
   font-size: 18px;
   line-height: 22px;
   font-weight: bold;
-  margin: 0;
 }
 
 .site-tag {
   font-size: 14px;
   line-height: 18px;
-  margin: 0;
 }
 
 input[name='search'] {
-  width: 500px;
+  width: 450px;
   height: 30px;
   padding: 4px 12px;
 }
@@ -61,23 +81,23 @@ input[name='search'] {
   align-items: center;
 }
 
-/* The main part of the page */
+/* MAIN SECTION */
 
 main {
   margin: auto;
   display: grid;
   width: 100%;
   gap: 16px;
-  max-width: 1280px;
+  max-width: 1360px;
 }
 
 .sidebar {
   margin: 0;
-  width: 400px;
+  width: 325px;
   position: fixed;
   overflow: auto;
-  max-height: 100%;
-  box-shadow: 2px 0 6px 0 rgba(0, 0, 0, 0.11);
+  height: 100%;
+  box-shadow: 2px 0 10px 0 rgba(0, 0, 0, 0.11);
 }
 
 .sidebar-content {
@@ -85,7 +105,6 @@ main {
 }
 
 .sidebar-section {
-  margin: 16px 0px;
 }
 
 .active {
@@ -94,9 +113,8 @@ main {
 
 .with-badge {
   display: flex;
-  height: 35px;
+  height: 30px;
   font-size: 14px;
-  margin: 4px 0px;
   justify-content: space-between;
   align-items: center;
 }
@@ -127,8 +145,11 @@ main {
 
 .main {
   padding: 8px;
-  margin-left: 400px;
-  background-color: whitesmoke;
+  margin-left: 325px;
+}
+
+.books {
+  margin: 24px;
 }
 
 header {
@@ -136,11 +157,75 @@ header {
   line-height: 36px;
   letter-spacing: 2px;
   text-transform: uppercase;
-  font-weight: 300;
-  border-bottom-width: 2px;
-  border-bottom-color: black;
+  font-weight: 400;
+  border-bottom-width: 1px;
+  border-bottom-color: rgba(0, 0, 0, 0.12);
   border-bottom-style: solid;
 }
+.books-listing {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
+  gap: 24px;
+  grid-auto-rows: 150px;
+}
+
+.book {
+  display: flex;
+  /* align-items: center; */
+}
+
+.book:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.book-cover {
+  margin-right: 8px;
+}
+
+.book-cover-image {
+  width: 120px;
+  height: 150px;
+}
+
+.book-details {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.availiability {
+}
+
+.book-text {
+  font-size: 14px;
+}
+
+.status-yes {
+  color: green;
+}
+
+.status-no {
+  color: red;
+}
+
+.book-info {
+}
+
+.title {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.metrics {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.ratings {
+}
+
+/* PLACEHOLDERS */
 
 .circle-picture {
   background-color: bisque;
