--- a/index.css
+++ b/index.css
@@ -77,6 +77,7 @@ nav {
 
 .site-tag {
   font-size: 14px;
+  font-weight: 300;
   line-height: 18px;
 }
 
@@ -109,8 +110,8 @@ input[name='search'] {
 .notification-count {
   font-size: 12px;
   font-weight: 900;
-  width: 25px;
-  height: 25px;
+  width: 22px;
+  height: 22px;
   border-radius: 50%;
 }
 
@@ -137,6 +138,7 @@ main {
 
 /* FEATURED BOOKS SECTION */
 .featured {
+  margin-top: 24px;
   margin-bottom: 48px;
 }
 
@@ -158,12 +160,20 @@ main {
   -ms-transform: translate(-50%, -50%);
 }
 
+.book-text-white {
+  color: white;
+}
+
 .carousel-cell:hover .featured-cover {
-  opacity: 0.3;
+  opacity: 0.1;
 }
 
 .carousel-cell:hover .content-effect {
   opacity: 1;
+}
+
+.width-80p {
+  width: 80%;
 }
 
 /* FLICKITY CUSTOMIZATION */
@@ -176,11 +186,12 @@ main {
   width: 250px;
   height: 300px;
   margin-right: 16px;
-  background: rgba(34, 30, 30, 0.267);
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.6) 10%, rgb(0, 0, 0));
   border-radius: 5px;
 }
 
 /* THE PREVIOUS AND NEXT BUTTONS */
+
 .flickity-button {
   background: rgba(255, 255, 255, 0.19);
 }
@@ -194,19 +205,25 @@ main {
   height: 300px;
   border-radius: 0px;
 }
+
 /* ICON COLOR */
+
 .flickity-button-icon {
   fill: black;
 }
+
 /* POSITIONING OUTSIDE */
+
 .flickity-prev-next-button.previous {
   left: -30px;
 }
+
 .flickity-prev-next-button.next {
   right: -30px;
 }
 
 /* PUSH DOTS DOWN */
+
 .flickity-page-dots {
   bottom: -40px;
 }
@@ -250,16 +267,6 @@ main {
   font-weight: 500;
 }
 
-/* .badge {
-  width: 30px;
-  height: 30px;
-  border-radius: 8px;
-  text-align: center;
-  background-color: green;
-  color: white;
-  margin: 0px;
-} */
-
 /* OTHER BOOKS SECTION */
 
 .main {
@@ -281,6 +288,7 @@ header {
   border-bottom-color: rgba(0, 0, 0, 0.12);
   border-bottom-style: solid;
 }
+
 .books-listing {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
