--- a/index.css
+++ b/index.css
@@ -105,7 +105,37 @@ input[name='search'] {
   min-width: 450px;
   height: 30px;
   margin: auto;
+  position: relative;
   padding: 4px 12px;
+}
+
+/* AUTOCOMPLETE */
+.autocomplete-items {
+  position: absolute;
+  border: 1px solid #d4d4d4;
+  border-bottom: none;
+  border-top: none;
+  z-index: 99;
+  /*position the autocomplete items to be the same width as the container:*/
+  top: 100%;
+  min-width: 480px;
+}
+
+.autocomplete-items div {
+  padding: 10px;
+  cursor: pointer;
+  background-color: #fff;
+  border-bottom: 1px solid #d4d4d4;
+}
+
+.autocomplete-items div:hover {
+  /*when hovering an item:*/
+  background-color: #e9e9e9;
+}
+.autocomplete-active {
+  /*when navigating through the items using the arrow keys:*/
+  background-color: DodgerBlue !important;
+  color: #ffffff;
 }
 
 .main-nav {
@@ -146,6 +176,49 @@ input[name='search'] {
   right: 0;
 }
 
+/* SIDEBAR CONTENT */
+
+.sidebar {
+  margin: 0;
+  width: 325px;
+  position: fixed;
+  overflow: auto;
+  height: 100%;
+  box-shadow: 2px 0 10px 0 rgba(0, 0, 0, 0.11);
+}
+
+.toggle {
+  display: none;
+}
+
+.sidebar-header {
+  padding-top: 16px;
+  font-weight: bold;
+  border-top-width: 2px;
+  border-top-color: rgba(0, 0, 0, 0.3);
+  border-top-style: solid;
+}
+
+.sidebar-content {
+  padding: 24px;
+}
+
+.active {
+  color: green;
+}
+
+.with-badge {
+  display: flex;
+  height: 30px;
+  font-size: 14px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.with-badge > p {
+  font-weight: 500;
+}
+
 /* MAIN SECTION */
 
 main {
@@ -177,19 +250,20 @@ main {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
 }
 
 .white {
   color: white;
 }
 
-.carousel-cell:hover .featured-cover {
-  opacity: 0.1;
-}
+@media (min-width: 768px) {
+  .carousel-cell:hover .featured-cover {
+    opacity: 0.1;
+  }
 
-.carousel-cell:hover .content-effect {
-  opacity: 1;
+  .carousel-cell:hover .content-effect {
+    opacity: 1;
+  }
 }
 
 .width-80p {
@@ -253,49 +327,6 @@ main {
 
 .flickity-page-dots .dot {
   margin: 6px;
-}
-
-/* SIDEBAR CONTENT */
-
-.sidebar {
-  margin: 0;
-  width: 325px;
-  position: fixed;
-  overflow: auto;
-  height: 100%;
-  box-shadow: 2px 0 10px 0 rgba(0, 0, 0, 0.11);
-}
-
-.toggle {
-  display: none;
-}
-
-.sidebar-header {
-  padding-top: 16px;
-  font-weight: bold;
-  border-top-width: 2px;
-  border-top-color: rgba(0, 0, 0, 0.3);
-  border-top-style: solid;
-}
-
-.sidebar-content {
-  padding: 24px;
-}
-
-.active {
-  color: green;
-}
-
-.with-badge {
-  display: flex;
-  height: 30px;
-  font-size: 14px;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.with-badge > p {
-  font-weight: 500;
 }
 
 /* OTHER BOOKS SECTION */
@@ -427,6 +458,10 @@ header {
     display: block;
   }
 
+  .autocomplete-items {
+    display: none;
+  }
+
   .sidebar {
     position: fixed;
     left: 0;
@@ -458,6 +493,24 @@ header {
     width: 150px;
     height: 200px;
     margin-right: 16px;
+  }
+
+  .more-options {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    z-index: 10;
+    width: 28px;
+    background-color: white;
+    border-radius: 50%;
+  }
+
+  .more-options:hover .featured-cover {
+    opacity: 0.1;
+  }
+
+  .more-options:hover .content-effect {
+    opacity: 1;
   }
 
   .flickity-prev-next-button.previous {
